@@ -17,11 +17,6 @@ package org.apache.geode.test.dunit.standalone;
 import static org.apache.geode.distributed.ConfigurationProperties.ENABLE_NETWORK_PARTITION_DETECTION;
 import static org.apache.geode.distributed.ConfigurationProperties.LOG_LEVEL;
 
-import org.apache.commons.io.FileUtils;
-import org.apache.geode.distributed.internal.DistributionConfig;
-import org.apache.geode.distributed.internal.InternalLocator;
-import org.apache.geode.test.dunit.VM;
-
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
@@ -30,7 +25,6 @@ import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
-import java.nio.file.Files;
 import java.rmi.AccessException;
 import java.rmi.NotBoundException;
 import java.rmi.RemoteException;
@@ -40,9 +34,13 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
 
-/**
- *
- */
+import org.apache.commons.io.FileUtils;
+
+import org.apache.geode.distributed.ConfigurationProperties;
+import org.apache.geode.distributed.internal.DistributionConfig;
+import org.apache.geode.distributed.internal.InternalLocator;
+import org.apache.geode.test.dunit.VM;
+
 public class ProcessManager {
   private int namingPort;
   private Map<Integer, ProcessHolder> processes = new HashMap<>();
@@ -90,12 +88,17 @@ public class ProcessManager {
     }
 
     // TODO - delete directory contents, preferably with commons io FileUtils
-    Process process = Runtime.getRuntime().exec(cmd, null, workingDir);
-    pendingVMs++;
-    ProcessHolder holder = new ProcessHolder(process);
-    processes.put(vmNum, holder);
-    linkStreams(version, vmNum, holder, process.getErrorStream(), System.err);
-    linkStreams(version, vmNum, holder, process.getInputStream(), System.out);
+    try {
+      Process process = Runtime.getRuntime().exec(cmd, null, workingDir);
+      pendingVMs++;
+      ProcessHolder holder = new ProcessHolder(process);
+      processes.put(vmNum, holder);
+      linkStreams(version, vmNum, holder, process.getErrorStream(), System.err);
+      linkStreams(version, vmNum, holder, process.getInputStream(), System.out);
+    } catch (RuntimeException | Error t) {
+      t.printStackTrace();
+      throw t;
+    }
   }
 
   public void validateVersion(String version) {
@@ -133,6 +136,7 @@ public class ProcessManager {
       ProcessHolder holder = processes.remove(vmNum);
       holder.kill();
       holder.getProcess().waitFor();
+      System.out.println("Old process for vm_" + vmNum + " has exited");
       launchVM(version, vmNum, true);
     } catch (InterruptedException | IOException e) {
       throw new RuntimeException("Unable to restart VM " + vmNum, e);
@@ -141,10 +145,11 @@ public class ProcessManager {
 
   private void linkStreams(final String version, final int vmNum, final ProcessHolder holder,
       final InputStream in, final PrintStream out) {
+    final String vmName = "[" + VM.getVMName(version, vmNum) + "] ";
+    System.out.println("linking IO streams for " + vmName);
     Thread ioTransport = new Thread() {
       public void run() {
         BufferedReader reader = new BufferedReader(new InputStreamReader(in));
-        String vmName = "[" + VM.getVMName(version, vmNum) + "] ";
         try {
           String line = reader.readLine();
           while (line != null) {
@@ -178,25 +183,26 @@ public class ProcessManager {
       classPath = dunitClasspath;
     } else {
       // remove current-version product classes and resources from the classpath
-      // String buildDir = separator + "geode-core" + separator + "build" + separator;
-      //
-      // String mainClasses = buildDir + "classes" + separator + "main";
-      // dunitClasspath = removeFromPath(dunitClasspath, mainClasses);
-      //
-      // String mainResources = buildDir + "resources" + separator + "main";
-      // dunitClasspath = removeFromPath(dunitClasspath, mainResources);
-      //
-      // String generatedResources = buildDir + "generated-resources" + separator + "main";
-      // dunitClasspath = removeFromPath(dunitClasspath, generatedResources);
-      //
-      // buildDir = separator + "geode-common" + separator + "build" + separator + "classes"
-      // + separator + "main";
-      // dunitClasspath = removeFromPath(dunitClasspath, buildDir);
-      //
-      // buildDir = separator + "geode-json" + separator + "build" + separator + "classes" +
-      // separator
-      // + "main";
-      // dunitClasspath = removeFromPath(dunitClasspath, buildDir);
+      String buildDir = separator + "geode-core" + separator + "build" + separator;
+
+      String mainClasses = buildDir + "classes" + separator + "main";
+      dunitClasspath = removeFromPath(dunitClasspath, mainClasses);
+
+      dunitClasspath = removeFromPath(dunitClasspath, "geode-core/out/production");
+
+      String mainResources = buildDir + "resources" + separator + "main";
+      dunitClasspath = removeFromPath(dunitClasspath, mainResources);
+
+      String generatedResources = buildDir + "generated-resources" + separator + "main";
+      dunitClasspath = removeFromPath(dunitClasspath, generatedResources);
+
+      buildDir = separator + "geode-common" + separator + "build" + separator + "classes"
+          + separator + "main";
+      dunitClasspath = removeFromPath(dunitClasspath, buildDir);
+
+      buildDir = separator + "geode-json" + separator + "build" + separator + "classes" + separator
+          + "main";
+      dunitClasspath = removeFromPath(dunitClasspath, buildDir);
 
       classPath = versionManager.getClasspath(version) + File.pathSeparator + dunitClasspath;
     }
@@ -245,11 +251,10 @@ public class ProcessManager {
     cmds.add("-D" + DistributionConfig.GEMFIRE_PREFIX + "DEFAULT_MAX_OPLOG_SIZE=10");
     cmds.add("-D" + DistributionConfig.GEMFIRE_PREFIX + "disallowMcastDefaults=true");
     cmds.add("-D" + DistributionConfig.RESTRICT_MEMBERSHIP_PORT_RANGE + "=true");
+    cmds.add("-D" + DistributionConfig.GEMFIRE_PREFIX
+        + ConfigurationProperties.VALIDATE_SERIALIZABLE_OBJECTS + "=true");
     cmds.add("-ea");
     cmds.add("-XX:MetaspaceSize=512m");
-    cmds.add("-XX:+PrintGC");
-    cmds.add("-XX:+PrintGCDetails");
-    cmds.add("-XX:+PrintGCTimeStamps");
     cmds.add(agent);
     cmds.add(ChildVM.class.getName());
     String[] rst = new String[cmds.size()];
